Fixed nav-menu z-index.

--- a/app/design/frontend/Shoperygroup/shopery/web/css/source/_nav-menu.less
+++ b/app/design/frontend/Shoperygroup/shopery/web/css/source/_nav-menu.less
@@ -1,8 +1,8 @@
 .sections.nav-sections {
     position: sticky;
     top: 0;
-    z-index: 99;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.4);
+    z-index: 20;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
     margin-bottom: 0;
 
     .navigation {
@@ -85,6 +85,7 @@
 @media only screen and (max-width: 768px) {
     .sections.nav-sections {
         position: fixed;
+        z-index: 99;
         top: 0;
 
         .navigation {
